--- a/index.html
+++ b/index.html
@@ -7,26 +7,13 @@
 		<link href="docs/assets/css/atribone.css" rel="stylesheet">
 	</head>
 	<body>
-
-		<div class="navbar navbar-inverse navbar-fixed-top">
-			<div class="navbar-inner">
-				<div class="container">
-					<div class="nav-collapse">
-						<ul class="nav">
-							<li class="active">
-								<a href="#">Home</a>
-							</li>
-						</ul>
-				 </div>
-			 </div>
-			</div>
-		</div>
 		<div class="container">
 			<div class="row-fluid">
-			</div>
-			<div class="row-fluid">
 				<div class="hero-unit">
-					<h1>Andrew Tribone</h1>
+					<h1>
+						Andrew Tribone
+						<small>§Home</small>
+					</h1>
 					<p>
 						Hi. This page is a work in progress. To see the source visit <a class="label label-info" href="https://github.com/att14/AndrewTribone">this cool website</a>.
 					</p>
